--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <title>Notebook</title>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="style.css" />
-        <script src="jquery-3.2.0.min.js"></script>
+        <link rel="stylesheet" href="css/style.css" />
+        <script src="js/jquery-3.2.0.min.js"></script>
     </head>
     <body>
         <div class="container control-panel">
