--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
             </div> 
         </div>
         <div class="container notes-panel"></div>
-        <script src="script.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
